...
                                ...createUsersRecordData(
                                  email: _model.emailController.text,
                                  name: _model.nameController.text,
                                  surname: _model.surnameController.text,
                                ),
                                'created_time': FieldValue.serverTimestamp(),
                                'kcal_goal': '2000',
                                'carbs_goal': '250',
                                'proteins_goal': '180',
                                'fats_goal': '60',
                              };
                              await UsersRecord.collection
                                  .doc(user.uid)
...
