...
          Padding(
            padding: EdgeInsetsDirectional.fromSTEB(0.0, 0.0, 10.0, 0.0),
            child: FFButtonWidget(
              onPressed: () async {
                context.pushNamed('AddCustomFood');
              },
              text: 'Add Custom Food',
              icon: Icon(
                Icons.add,
                size: 15.0,
              ),
              options: FFButtonOptions(
                width: 130.0,
...
