...
                      Icons.add_circle_outline_rounded,
                      color: FlutterFlowTheme.of(context).primaryText,
                      size: 28.0,
                    ),
                    onPressed: () async {
                      addFoodToDiary();
                      context.goNamed('Diary');
                    },
                  ),
                ],
              ),
            ),
          ],
...
